// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DateInput snapshots renders an error state 1`] = `
<div
  className="m-btn-inside-input"
>
  <input
    className="a-text-input a-text-input__error"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="M/D/YYYY"
    size="15"
    value="foo"
  />
  <button
    className="a-btn a-btn__link"
    onClick={[Function]}
  >
    <svg
      className="cf-icon-svg"
      viewBox="0 0 718.9 1200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
      />
    </svg>
    <span
      className="u-visually-hidden"
    >
      Clear
    </span>
  </button>
</div>
`;

exports[`component::DateInput snapshots renders without crashing 1`] = `
<div
  className="m-btn-inside-input"
>
  <input
    className="a-text-input"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="M/D/YYYY"
    size="15"
    value=""
  />
</div>
`;

exports[`component::DateInput snapshots shows the clear button after text is entered 1`] = `
<div
  className="m-btn-inside-input"
>
  <input
    className="a-text-input"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="M/D/YYYY"
    size="15"
    value="12"
  />
  <button
    className="a-btn a-btn__link"
    onClick={[Function]}
  >
    <svg
      className="cf-icon-svg"
      viewBox="0 0 718.9 1200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M451.4 613.7l248.1-248.1c25.6-25.1 26-66.3.8-91.9s-66.3-26-91.9-.8l-.8.8-248.1 248.1-248.1-248.1c-25.4-25.4-66.5-25.4-91.9 0s-25.4 66.5 0 91.9l248.1 248.1L19.5 861.8c-25.6 25.1-26 66.3-.8 91.9s66.3 26 91.9.8l.8-.8 248.1-248.1 248.1 248.1c25.4 25.4 66.5 25.4 91.9 0s25.4-66.5 0-91.9L451.4 613.7z"
      />
    </svg>
    <span
      className="u-visually-hidden"
    >
      Clear
    </span>
  </button>
</div>
`;
